website/versioned_docs/version-2.0.x/reference/subsystems/flake8.mdx
---
title: flake8
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Flake8 Python linter (https://flake8.pycqa.org/).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[flake8]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]flake8-skip`}
  env_repr="PANTS_FLAKE8_SKIP"
  default_repr={`False`}
>
  Don&#x27;t use Flake8 when running
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`
</Option>

### `args`

<Option
  cli_repr={`--flake8-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_FLAKE8_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to Flake8, e.g. `--flake8-args="--ignore E123,W456
  --enable-extensions H111"`
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--flake8-version=<str>`}
  env_repr="PANTS_FLAKE8_VERSION"
  default_repr={`flake8>=3.7.9,<3.9`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--flake8-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_FLAKE8_EXTRA_REQUIREMENTS"
  default_repr={`["setuptools<45"]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `entry_point`

<Option
  cli_repr={`--flake8-entry-point=<str>`}
  env_repr="PANTS_FLAKE8_ENTRY_POINT"
  default_repr={`flake8`}
>
  The main module for the tool. Usually, you will not want to change this from
  the default.
</Option>

### `config`

<Option
  cli_repr={`--flake8-config=<file_option>`}
  env_repr="PANTS_FLAKE8_CONFIG"
  default_repr={`None`}
>
  Path to `.flake8` or alternative Flake8 config file
</Option>

## Deprecated options

### `interpreter_constraints`

<Option
  cli_repr={`--flake8-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_FLAKE8_INTERPRETER_CONSTRAINTS"
  default_repr={`[]`}
  removal_version="2.1.0.dev0"
  removal_hint={
    "This option no longer does anything, as Pants auto-configures the interpreter constraints for flake8 based on your code's interpreter constraints."
  }
>
  Python interpreter constraints for this tool.
</Option>

</span>

